<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/java"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/java_button"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/c"
        android:layout_below="@+id/java"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_button"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/cpp"
        android:layout_below="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpp_button"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/python"
        android:layout_below="@+id/cpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/python_button"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/sql"
        android:layout_below="@+id/python"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sql_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

</LinearLayout>