<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cameron.boles.android.pocketprogrammer.WelcomeActivity">

    <Button
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_button"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/conversion"
        android:layout_below="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conversion_button"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/calculator"
        android:layout_below="@+id/conversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_button"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/gdb"
        android:layout_below="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gdb_button"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/linux"
        android:layout_below="@+id/gdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linux_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

</RelativeLayout>
